# local_llama3

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkvirtualenv.bat  project_structure.txt  pyproject.toml  requirements.txt  setup.cfg  ws_install_venv.bat
docs/: mkdocs.yml
docs/docs/: index.md  provision-aws.md
local_llama3/: __init__.py  config.py
local_llama3/data/: fb_make_dataset.py  make_dataset.py
local_llama3/features/: build_features.py
local_llama3/modeling/: fb_train.py  predict.py  train.py
local_llama3/visualization/: visualize.py
models/: load_model.py
tools/: project_tree.py
wandb/run-20240715_171710-830h65k4/: run-830h65k4.wandb
wandb/run-20240715_171710-830h65k4/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20240715_180306-73skj0sk/files/: config.yaml  wandb-metadata.json  wandb-summary.json
