[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "local_llama3"
version = "0.0.1"
description = "Fine-tune Llama 3 on a dataset of patient-doctor conversations."
authors = [
  { name = "Analitika" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.9"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | local_llama3/local_llama3/data
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["local_llama3"]
force_sort_within_sections = true
skip = [".venv"]
